--- a/website/info.addr.tools/info.css
+++ b/website/info.addr.tools/info.css
@@ -30,9 +30,14 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   display: inline-block;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 1.3;
   margin: 2em 2em 2em 1em;
+}
+@media (min-width: 768px) {
+  body {
+    font-size: 14px;
+  }
 }
 body, code, kbd, samp, var {
   font-family: 'Roboto Mono', monospace;
